feat: return image id and url
